Block paths starting with .. and UNC paths Add several extra tests, restructured tests for better readability